--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<link href="https://fonts.googleapis.com/css?family=Convergence|Oleo+Script" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.optimizely.com/js/9874509362.js"></script>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/main.css" />
-		<script src="javascripts/jquery.min.js"></script>
 		<script src="javascripts/main.js" charset="utf-8"></script>
 	</head>
 	<body>
