--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 
 		<!-- Scripts -->
 	<script type="text/javascript">
+  var $ = window.optimizely.get('jquery');
 
 	$('#body').css('opacity', 0);
 	$()
