--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@
   });
 });
 
+var self = this;
+
 $('.skills').click(function() {
-  activateProductPage();
+  self.activateProductPage();
 });
 	</script>
 
