--- a/index.html
+++ b/index.html
@@ -213,9 +213,8 @@
 
 var self = this;
 
-$('.skills').click(function() {
-  self.activateProductPage();
-});
+activateProductPage();
+
 	</script>
 
 	</body>
