--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.optimizely.com/js/9874509362.js"></script>
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/main.css" />
-		<script src="javascripts/main.js" charset="utf-8"></script>
 	</head>
 	<body>
 		<header class="sticky-header">
@@ -126,7 +124,7 @@
 				<a name="about"></a>
 				<div class="about-wrapper">
 					<div class="stats col-md-4 col-sm-4">
-				
+
 
 						<ul>
 
@@ -181,6 +179,11 @@
 		<!-- Scripts -->
 	<script type="text/javascript">
   var $ = window.optimizely.get('jquery');
+
+  window['optimizely'].push({
+    type: "page",
+    pageName: "9874509362_homepage"
+  });
 
   activateProductPage();
 
