--- a/index.html
+++ b/index.html
@@ -180,10 +180,14 @@
 	<script type="text/javascript">
   var $ = window.optimizely.get('jquery');
 
+function activatePage() {
   window['optimizely'].push({
     type: "page",
     pageName: "9874509362_homepage"
   });
+}
+
+  activatePage();
 
   activateProductPage();
 
