--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</div>
 					<div class="profile col-md-4 col-sm-4">
 						<div class="prof-pic">
-							<img src="images/pppppp.png" alt="" />
+							
 						</div>
 					</div>
 					<div class="about-text">
@@ -177,7 +177,7 @@
 
 
 		<!-- Scripts -->
-	<script type="text/javascript">
+	<script>
   var $ = window.optimizely.get('jquery');
 
 function activatePage() {
