--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</div>
 					<div class="profile col-md-4 col-sm-4">
 						<div class="prof-pic">
-							
+
 						</div>
 					</div>
 					<div class="about-text">
@@ -187,12 +187,9 @@ function activatePage() {
   });
 }
 
-  activatePage();
-
-  activateProductPage();
+//  activateProductPage();
 
 	$('#body').css('opacity', 0);
-	$()
 	$(window).load(function() {
   	$('#body').css('opacity', 1);
 		$('.loading').text('');
