--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@ function activatePage() {
   });
 }
 
+$('.skills').click(function() {
+  activatePage();
+})
+
 //  activateProductPage();
 
 	$('#body').css('opacity', 0);
