--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
 	<script>
   var $ = window.optimizely.get('jquery');
 
+  window["optimizely"].push({
+  "type": "activate"
+});
+
 function activatePage() {
   window['optimizely'].push({
     type: "page",
     pageName: "9874509362_homepage"
   });
 }
-
-$('.skills').click(function() {
-  activatePage();
-})
 
 //  activateProductPage();
 
