--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ function activatePage() {
   });
 }
 
-//  activateProductPage();
+  activateProductPage();
 
 	$('#body').css('opacity', 0);
 	$(window).load(function() {
