--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@ function activatePage() {
   });
 }
 
-activateProductPage();
+$('.skills').click(function() {
+  activateProductPage();
+});
+
 
 	$('#body').css('opacity', 0);
 	$(window).load(function() {
