--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</a>
 			<a href="#skills">
 			<div class="skills nav col-md-6">
-					<h2 class="text-nav"><span>Skills</span></h2>
+					<h2 class="text-nav"><span>Contact</span></h2>
 			</div>
 			</a>
 			<a href="#about">
@@ -50,126 +50,10 @@
 			</a>
 			<a href="#code">
 			<div class="code nav col-md-6">
-					<h2 class="text-nav"><span>Code</span></h2>
+					<h2 class="text-nav"><span>Careers</span></h2>
 			</div>
 			</a>
 		</section>
-
-		<main>
-		<a name="work"></a>
-			<section class="work">
-			<div class="row1">
-				<div class="project col-md-4 col-sm-4">
-					<a target="_blank" href="https://github.com/rtsaunders19/Austin_Recycles">
-						<h2 class="rec proj-title"><span>Can I Recycle This?</span><h2>
-						<p class="rec-desc proj-desc">React Native</p>
-					</a>
-				</div>
-				<div class="project col-md-4 col-sm-4">
-					<a target="_blank" href="http://sample-env.fre3perh5e.us-east-1.elasticbeanstalk.com">
-					<h2 class="health proj-title"><span>Health Connect</span><h2>
-					<p class="health-desc proj-desc">jQuery, Node.js, MongoDB, Auth0</p>
-					</a>
-				</div>
-				<div class="project col-md-4 col-sm-4">
-					<a target="_blank" href="https://rtsaunders19.github.io/11-or-20/starter-code/">
-					<h2 class="eleven proj-title"><span>11 or 20?</span><h2>
-					<p class="eleven-desc proj-desc">HTML, CSS, jQuery</p>
-					</a>
-				</div>
-				</div>
-				<div class="row2">
-				<div class="project col-md-4 col-sm-4">
-					<a target="_blank" href="http://sanicland.herokuapp.com/">
-						<h2 class="sanic proj-title"><span>Sanic Land</span><h2>
-						<p class="sanic-desc proj-desc">ReactJS, Socket.io, MongoDB</p>
-						<a target="_blank" class="proj-desc" href="http://sanicland.herokuapp.com"><p class="game">Click this to go to game</p></a>
-						<a target="_blank" class="proj-desc" href="http://sanicland.herokuapp.com/admin"><p class="start-game">Click this to go to admin page to start game</p></a>
-					</a>
-				</div>
-				<div class="project col-md-4 col-sm-4">
-					<a target="_blank" href="https://rescuemaps.info">
-						<h2 class="rescue proj-title"><span>RescueMaps.info</span><h2>
-						<p class="sanic-desc proj-desc">HTML, CSS, Javascript, Google Maps API</p>
-					</a>
-				</div>
-				</div>
-			</section>
-			<section class="skills-section">
-			<a name="skills"></a>
-			<div class="skills-wrapper">
-				<div class="col-md-4 col-sm-4">
-					<ul>
-						<li>HTML & CSS</li>
-						<li>Javascript & jQuery</li>
-						<li>Node.js & RESTful APIs</li>
-						<li>ReactJS</li>
-					</ul>
-				</div>
-				<div class="col-md-4 col-sm-4">
-					<ul>
-						<li>React Native</li>
-						<li>Redux</li>
-						<li>MongoDB</li>
-						<li>Bootstrap & Semantic UI</li>
-					</ul>
-				</div>
-				<div class="col-md-4 col-sm-4">
-					<ul>
-						<li>Git & Github</li>
-						<li>Firebase</li>
-						<li>Mocha & Chai</li>
-						<li>AJAX</li>
-					</ul>
-				</div>
-			</div>
-			</section>
-			<section class="about-section">
-				<a name="about"></a>
-				<div class="about-wrapper">
-					<div class="stats col-md-4 col-sm-4">
-
-
-						<ul>
-
-						</ul>
-
-					</div>
-					<div class="profile col-md-4 col-sm-4">
-						<div class="prof-pic">
-
-						</div>
-					</div>
-					<div class="about-text">
-
-					</div>
-				</div>
-			</section>
-			<section class="code-section">
-				<a name="code"></a>
-				<div class="code-wrapper">
-					<ul>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/shapeArea">shapeArea</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/blob/master/almostIncreasingSequence">almostIncreasingSequence</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/matrixElementsSum">matrixElementsSum</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/allLongestStrings">allLongestStrings</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/commonCharacterCount">commonCharacterCount</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/blob/master/isLucky/isLucky.js">isLucky</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/sortByHeight">sortByHeight</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/reverseParentheses">reverseParentheses</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/alternatingSums">alternatingSums</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/addBorder">addBorder</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/areSimilar">areSimilar</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/arrayChange">arrayChange</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/palindromeRearrangeOptimized">palindromeRearrangeOptimized</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/palindromeRearrangeTwoForLoops">palindromeRearrangeTwoForLoops</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/countSmaller">countSmaller</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/distinctHead">distinctHead</a></li>
-						<li><a target="_blank" href="https://github.com/rtsaunders19/almost_an_almostIncreasingSequence/tree/master/moveZeroes">moveZeroes</a></li>
-					</ul>
-				</div>
-			</section>
-		</main>
 		</div>
 
 				<!-- Footer -->
