--- a/index.html
+++ b/index.html
@@ -29,26 +29,18 @@
 		<div id="body">
 		<div id="content">
 		<section>
-			<a href="#work">
-			<div class="nav col-md-6">
+			<div class="work nav col-md-6">
 					<h2 class="text-nav"><span>Work</span></h2>
 			</div>
-			</a>
-			<a href="#skills">
-			<div class="skills nav col-md-6">
+			<div class="contact nav col-md-6">
 					<h2 class="text-nav"><span>Contact</span></h2>
 			</div>
-			</a>
-			<a href="#about">
 			<div class="about nav col-md-6">
 					<h2 class="text-nav"><span>About</span></h2>
 			</div>
-			</a>
-			<a href="#code">
-			<div class="code nav col-md-6">
+			<div class="careers nav col-md-6">
 					<h2 class="text-nav"><span>Careers</span></h2>
 			</div>
-			</a>
 		</section>
 		</div>
 
