--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 		<!-- Scripts -->
 	<script>
   var $ = window.optimizely.get('jquery');
-
+  $('.contact').click(function() {
+    activateProductPage();
+  });
 
 	$('#body').css('opacity', 0);
 	$(window).load(function() {
