changed function name

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<script>
   var $ = window.optimizely.get('jquery');
   $('.contact').click(function() {
-    activateProductPage();
+    activatePage();
   });
 
 	$('#body').css('opacity', 0);
