--- a/index.html
+++ b/index.html
@@ -55,6 +55,33 @@
 		$('.loading').text('');
 	});
 
+	var optlyState = window.optimizely.get('state');
+
+	var activeExperiments = optlyState.getActiveExperimentIds();
+
+	var variationMap = state.getVariationMap();
+
+	var variations = [];
+
+	for (var i=0; i<activeExperiments.length; i++) {
+			variations.push(variationMap[activeExperiments[i]].id);
+		}
+
+	var variationsValue = variations.join(',');
+
+	console.log(variationsValue);
+
+/*
+	window["optimizely"].push({
+  "type": "user",
+  "attributes": {
+    "variations_exposed": variationsValue
+  }
+});
+*/
+
+
+
 	$(function() {
   $('a[href*="#"]:not([href="#"])').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
