optly state fix

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 	var activeExperiments = optlyState.getActiveExperimentIds();
 
-	var variationMap = state.getVariationMap();
+	var variationMap = optlyState.getVariationMap();
 
 	var variations = [];
 
