--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 		<!-- Scripts -->
 	<script>
   var $ = window.optimizely.get('jquery');
-  $('.contact').click(function() {
-    activatePage();
+
+	window["optimizely"].push({
+  "type": "activate"
   });
 
 	$('#body').css('opacity', 0);
@@ -65,7 +66,7 @@
 
 	for (var i=0; i<activeExperiments.length; i++) {
 			variations.push(variationMap[activeExperiments[i]].id);
-		}
+	}
 
 	var variationsValue = variations.join(',');
 
