--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 		<!-- Scripts -->
 	<script>
+	window['optimizely'] = window['optimizely'] || [];
   var $ = window.optimizely.get('jquery');
 
 	window["optimizely"].push({
