--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
   var $ = window.optimizely.get('jquery');
 
 	window["optimizely"].push({
-  "type": "activate"
-  });
+  "type": "bucketVisitor",
+  "experimentId": "10023950566",
+  "variationId": "10316598429"
+});
 
 	$('#body').css('opacity', 0);
 	$(window).load(function() {
