--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 $('.work .text-nav').click(function() {
 	window["optimizely"].push({
   "type": "event",
-  "eventName": "clicked_work"
+  "eventName": "purchase"
 	});
 })
 
