--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 	</head>
 	<body>
 		<header class="sticky-header">
-			<h1>Company Name </h1>
+			<h1>Company Name</h1>
 		</header>
 		<div id="body">
 		<div id="content">
 		<section>
 			<div class="work nav col-md-6">
-					<h2 class="text-nav"><span>Work</span></h2>
+					<h2 class="text-nav"><span>Congress driven to distraction</span></h2>
 			</div>
 			<div class="contact nav col-md-6">
-					<h2 class="text-nav"><span>Contact</span></h2>
+					<h2 class="text-nav"><span>Stormy Daniels offers to return $130,000 to end deal to keep quiet</span></h2>
 			</div>
 			<div class="about nav col-md-6">
-					<h2 class="text-nav"><span>About</span></h2>
+					<h2 class="text-nav"><span>Congress nears deal to crack down on sexual harassment</span></h2>
 			</div>
 			<div class="careers nav col-md-6">
-					<h2 class="text-nav"><span>Careers</span></h2>
+					<h2 class="text-nav"><span>Democrats ask for copy of Trump Organization’s check to taxpayers</span></h2>
 			</div>
 		</section>
 		</div>
@@ -87,21 +87,6 @@ $('.work .text-nav').click(function() {
 })
 
 
-
-	$(function() {
-  $('a[href*="#"]:not([href="#"])').click(function() {
-    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-      var target = $(this.hash);
-      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-      if (target.length) {
-        $('html, body').animate({
-          scrollTop: target.offset().top
-        }, 800);
-        return false;
-      }
-    }
-  });
-});
 
 	</script>
 
