--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 		<div id="content">
 		<section>
 			<div class="work nav col-md-6">
-					<h2 class="text-nav"><span>Congress driven to distraction</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px">Congress driven to distraction</span></h2>
 			</div>
 			<div class="contact nav col-md-6">
-					<h2 class="text-nav"><span>Stormy Daniels offers to return $130,000 to end deal to keep quiet</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px">Stormy Daniels offers to return $130,000 to end deal to keep quiet</span></h2>
 			</div>
 			<div class="about nav col-md-6">
-					<h2 class="text-nav"><span>Congress nears deal to crack down on sexual harassment</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px">Congress nears deal to crack down on sexual harassment</span></h2>
 			</div>
 			<div class="careers nav col-md-6">
-					<h2 class="text-nav"><span>Democrats ask for copy of Trump Organization’s check to taxpayers</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px">Democrats ask for copy of Trump Organization’s check to taxpayers</span></h2>
 			</div>
 		</section>
 		</div>
