--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<div id="content">
 		<section>
 			<div class="work nav col-md-6">
+				<a class="link-to-other" href="https://robisatthefunction.github.io/mock2/index.html">Link to other site</a>
 					<h2 class="text-nav"><span style="font-size:20px">Congress driven to distraction</span></h2>
 			</div>
 			<div class="contact nav col-md-6">
@@ -79,11 +80,19 @@
 });
 */
 
+$('.link-to-other').click(function() {
+	window["optimizely"].push({
+  "type": "user",
+  "attributes": {
+    "123": true,
+  }
+});
+}
+
 $('.work .text-nav').click(function() {
-	console.log('helllllloooo');
 	window["optimizely"].push({
   "type": "event",
-  "eventName": "trackRevenue",
+  "eventName": "cartCheckout",
 			"tags": {
 				"revenue": 1000
 			}
