--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="content">
 		<section>
 			<div class="work nav col-md-6">
-				<a class="link-to-other" href="https://robisatthefunction.github.io/mock2/index.html">Link to other site</a>
+				<a class="link-to-other" href="#">Link to other site</a>
 					<h2 class="text-nav"><span style="font-size:20px">Congress driven to distraction</span></h2>
 			</div>
 			<div class="contact nav col-md-6">
