--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.optimizely.com/js/9874509362.js"></script>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/main.css"/>
 	</head>
 	<body>
 		<header class="sticky-header">
@@ -84,7 +84,7 @@ $('.link-to-other').click(function() {
 	window["optimizely"].push({
   "type": "user",
   "attributes": {
-    "123": true,
+    "membership": "selfEmployed",
   }
 });
 });
