--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script>
 			var dataLayer = window.dataLayer = window.dataLayer || [];
 			dataLayer.push({
-				page: "homepage"
+				page: "restoran_sayfasi"
 			});
 		</script>
     <script src="https://cdn.optimizely.com/js/9874509362.js"></script>
