--- a/index.html
+++ b/index.html
@@ -7,16 +7,29 @@
 		<link href="https://fonts.googleapis.com/css?family=Convergence|Oleo+Script" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script>
-			var dataLayer = window.dataLayer = window.dataLayer || [];
-			dataLayer.push({
-				page: "restoran_sayfasi"
-			});
-		</script>
-    <script src="https://cdn.optimizely.com/js/9874509362.js" async></script>
+    <script src="https://cdn.optimizely.com/js/9874509362.js"></script>
 		<script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
 <script>
+
+const urlParams = new URLSearchParams(window.location.search);
+const sdkKey = urlParams('sdkKey')
+
+const optimizelyClient = optimizelySdk.createInstance({
+	sdkKey: sdkKey
+})
+
+optimizelyClient.onReady().then(() => {
+  optimizelyClient.track('click','user123')
+});
+
+</script>
+
+
+<!--
+<script>
 const url = 'https://cdn.optimizely.com/datafiles/Pex4GNxQnzDErs3TJZ7cc3.json';
+
+
 window
   .fetch(url, { mode: 'cors' })
   .then(response => response.json())
@@ -27,6 +40,7 @@ window
 		optimizelyClientInstance.track('ordered_app', 'user1');
   });
 </script>
+-->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/main.css"/>
