--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			var variation = optimizelyClient.activate('color_test', userId);
 			if (variation == 'variation_2'){
 				document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css')
-			} 
+			}
 
 			document.querySelectorAll('.text-nav').forEach(item => {
 	  		item.addEventListener('click', event => {
@@ -41,7 +41,7 @@
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/main2.css"/>
+		<link rel="stylesheet" href="css/main.css"/>
 	</head>
 	<body>
 		<header class="sticky-header">
