--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 			sdkKey: sdkKey
 		})
 
-		optimizelyClient.onReady().then(() => {
+	/*	optimizelyClient.onReady().then(() => {
 		  window.optimizelyClient = optimizelyClient
 
 			var variation = optimizelyClient.activate('color_test', userId, {'$opt_bucketing_id':bucketingId, 'tier':tier});
 			if (variation == 'variation_2'){
 				document.querySelector('head > link:nth-child(12)').setAttribute('href', 'css/main2.css')
 			}
-
+*/
 			document.querySelectorAll('.text-nav').forEach(item => {
 	  		item.addEventListener('click', event => {
 				optimizelyClient.track('click', userId)
