--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Convergence|Oleo+Script" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!--<script>window.mapOptlyUserId_To_DealerId = '100025';</script>-->
+		<script>window.mapOptlyUserId_To_DealerId = '100025';</script>
     <script src="https://cdn.optimizely.com/js/9874509362.js"></script>
 		<script src="https://unpkg.com/@optimizely/optimizely-sdk/dist/optimizely.browser.umd.min.js"></script>
 
