--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script>
 
 		const urlParams = new URLSearchParams(window.location.search);
-		const userId = urlParams.get('userId')
+		const userId = 45345345;
+		//const userId = urlParams.get('userId')
 		const sdkKey = urlParams.get('sdkKey')
 		const bucketingId = urlParams.get('bucketingId')
 		const tier = urlParams.get('tier')
