--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		const bucketingId = urlParams.get('bucketingId')
 		const tier = urlParams.get('tier')
 		setTimeout(function(){
-			window.userTypeValue = 'Lender'
+			window.userTypeValue = 'Dealer'
 		},500)
 		setTimeout(function(){
 			window.dealerId = '100025'
