--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 					<h2 class="text-nav"><span style="font-size:20px"></span></h2>
 			</div>
 			<div class="contact nav col-md-6">
-					<h2 class="text-nav"><span style="font-size:20px">Experience 3 CTA</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px"><a href="coxautoinc.com">CTA</a></span></h2>
 			</div>
 			<div class="about nav col-md-6">
-					<h2 class="text-nav"><span style="font-size:20px">Experience 1 CTA</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px">CTA</span></h2>
 			</div>
 			<div class="careers nav col-md-6">
-					<h2 class="text-nav"><span style="font-size:20px">Experience 2 CTA</span></h2>
+					<h2 class="text-nav"><span style="font-size:20px">CTA</span></h2>
 			</div>
 		</section>
 		</div>
